--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,13 +5,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.mogujie.tt"
-        minSdkVersion 11
-        targetSdkVersion 19
+        minSdkVersion 23
+        targetSdkVersion 26
         versionCode 5
         versionName "2.0.0"
     }
@@ -26,9 +25,11 @@ android {
     sourceSets.main.jni.srcDirs = [] //disable automatic ndk-build call
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    useLibrary 'org.apache.http.legacy'
 
     lintOptions {
         abortOnError false
@@ -38,17 +39,25 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi', 'armeabi-v7a'
+            universalApk false
+        }
+    }
 }
 
 dependencies {
-    compile project(':mgimlibs')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
-    compile 'com.google.protobuf:protobuf-java:2.6.1'
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'de.greenrobot:greendao:1.3.7'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.squareup.okhttp:okhttp:2.0.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'commons-io:commons-io:2.4'
+    implementation project(':mgimlibs')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation 'com.google.protobuf:protobuf-java:2.6.1'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'de.greenrobot:greendao:1.3.7'
+    implementation 'com.google.code.gson:gson:2.3.1'
+    implementation 'com.squareup.okhttp:okhttp:2.0.0'
+    implementation 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    implementation 'commons-io:commons-io:2.4'
 }
