--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,9 +2,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
     }
 }
 
@@ -12,5 +13,6 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
+        google()
     }
 }
