--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,40 +1,13 @@
-# OSX
-.DS_Store
-
-# android generated
-bin/
-gen/
-
-# eclipse
-.classpath
-.settings
-.project
-
-local.properties
-project.properties
-
-# IDEA
-.idea/
 *.iml
-out/
-
-# gradle
-build/
-.gradle/
-gradle/
-gradlew
-gradlew.bat
-gradle.properties
-
-# build
-lint.xml
-lint.html
-proguard-rules.txt
-import-summary.txt
-
-run.sh
-com_crashlytics_export_strings.xml
-crashlytics-build.properties
-
-# test
-test.html
+.gradle
+/local.properties
+/.idea/caches
+/.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/navEditor.xml
+/.idea/assetWizardSettings.xml
+.DS_Store
+build
+/captures
+.externalNativeBuild
