--- a/server/src/slog/log4cxx.properties
+++ b/server/src/slog/log4cxx.properties
@@ -1,18 +1,14 @@
-#È±Ê¡²»Êä³öÈÕÖ¾µ½¿ØÖÆÌ¨stdout
-log4j.rootLogger=INFO, default
-#log4j.rootLogger=DEBUG, stdout, default
+log4j.rootLogger=INFO, stderr
 log4j.additivity.org.apache=false
 
-#log4j.loggerÓÃÓÚ¿ØÖÆ²É¼¯¼¶±ğ¼°²É¼¯ÄÚÈİ
-#ThresholdÓÃÓÚ¿ØÖÆÊä³ö¼¶±ğ
+# configure stderr
+log4j.appender.stderr = org.apache.log4j.ConsoleAppender
+log4j.appender.stderr.Threshold = INFO
+log4j.appender.stderr.Target   = System.err
+log4j.appender.stderr.layout = org.apache.log4j.PatternLayout
+log4j.appender.stderr.layout.ConversionPattern = %d [%-5p %.16c] - %m%n
 
-#Ó¦ÓÃÓÚ¿ØÖÆÌ¨
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%-5p] - %m%n
-#log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%t] %-5p - %m%n
-
-#Ó¦ÓÃÓÚÎÄ¼ş»Ø¹ö
+#åº”ç”¨äºæ–‡ä»¶å›æ»š
 log4j.appender.default=org.apache.log4j.RollingFileAppender
 log4j.appender.default.File=./log/default.log
 log4j.appender.default.MaxFileSize=10MB
@@ -24,8 +20,8 @@ log4j.appender.default.layout=org.apache.log4j.PatternLayout
 log4j.appender.default.layout.ConversionPattern=%d [%-5p %.16c] - %m%n
 
 #TEST
-log4j.logger.test=DEBUG, test
-#Ó¦ÓÃÓÚÎÄ¼ş»Ø¹ö
+log4j.logger.test=DEBUG, stderr
+#åº”ç”¨äºæ–‡ä»¶å›æ»š
 log4j.appender.test=org.apache.log4j.RollingFileAppender
 log4j.appender.test.File=./log/TEST.log
 log4j.appender.test.MaxFileSize=10MB
@@ -35,4 +31,3 @@ log4j.appender.test.Append=true
 log4j.appender.test.Threshold=DEBUG
 log4j.appender.test.layout=org.apache.log4j.PatternLayout
 log4j.appender.test.layout.ConversionPattern=%d [%-5p %.16c] - %m%n
-
