--- a/server/src/slog/CMakeLists.txt
+++ b/server/src/slog/CMakeLists.txt
@@ -1,21 +1,9 @@
-cmake_minimum_required(VERSION 2.6)
-PROJECT(slog)
+cmake_minimum_required(VERSION 3.12)
+PROJECT(slog LANGUAGES CXX)
 AUX_SOURCE_DIRECTORY(./ SRC_LIST)
-SET(CMAKE_MACOSX_RPATH 1)
-SET(LIBRARY_OUTPUT_PATH .)
 
-ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
+add_library(slog SHARED ${SRC_LIST})
+target_compile_definitions(slog PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
 -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
 -DAC_HAS_DEBUG -DLINUX_DAEMON)
-
-INCLUDE_DIRECTORIES(./ ./include ./include/log4cxx)
-LINK_DIRECTORIES(./ ./lib)
-
-
-#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
-#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
-#ADD_EXECUTABLE(slog ${SRC_LIST})
-ADD_LIBRARY(slog SHARED ${SRC_LIST})
-
-TARGET_LINK_LIBRARIES(slog log4cxx)
- 
+target_link_libraries(slog PRIVATE log4cxx)
