Refactor CMake scripts to automate server build with one step
The new CMake build scripts allow you to use cmake to build all server components.
This change gets rid of the original awkward and faulty `.sh` build scripts.

Refer to `server/README.md` for build instructions.

--- a/server/src/db_proxy_server/CMakeLists.txt
+++ b/server/src/db_proxy_server/CMakeLists.txt
@@ -1,31 +1,14 @@
-cmake_minimum_required(VERSION 2.6)
-PROJECT(db_proxy_server)
+cmake_minimum_required(VERSION 3.12)
+PROJECT(db_proxy_server LANGUAGES CXX)
 
 AUX_SOURCE_DIRECTORY(./ SRC_LIST)
 AUX_SOURCE_DIRECTORY(./business SRC_LIST)
 
-#SET(LIBRARY_OUTPUT_PATH ./)
-SET(EXECUTABLE_OUTPUT_PATH  ./)
-if(APPLE)
-    SET(PB_LIB_DIR ../base/pb/lib/mac)
-elseif(UNIX)
-    SET(PB_LIB_DIR ../base/pb/lib/linux)
-endif()
+find_package(jsoncpp CONFIG REQUIRED)
+get_target_property(jsoncpp_INCLUDE_DIR jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
 
-SET(MYSQL_INCLUDE_DIR /usr/include/mysql)
-SET(MYSQL_LIB /usr/lib64/mysql)
-
-ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
--DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
--DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11 -DENCRYPT)
-
-INCLUDE_DIRECTORIES(./ ./businiess ../base ../base/jsoncpp ../base/pb/protocol
-../base/pb/ ${MYSQL_INCLUDE_DIR})
-LINK_DIRECTORIES(./ ../base ${PB_LIB_DIR} ${MYSQL_LIB} ../base/slog/lib)
-
-#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
-#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
 ADD_EXECUTABLE(db_proxy_server ${SRC_LIST})
-
-TARGET_LINK_LIBRARIES(db_proxy_server pthread base protobuf-lite mysqlclient_r hiredis curl slog crypto)
- 
+target_compile_features(db_proxy_server PRIVATE cxx_std_11)
+target_include_directories(db_proxy_server PRIVATE ./businiess .. ../base ../base/pb/protocol ${jsoncpp_INCLUDE_DIR} ${jsoncpp_INCLUDE_DIR}/jsoncpp)
+TARGET_LINK_LIBRARIES(db_proxy_server PRIVATE pthread base protobuf-lite mysqlclient_r hiredis jsoncpp slog curl crypto)
+target_link_directories(db_proxy_server PRIVATE /usr/lib64/mysql)
