--- a/server/src/login_server/CMakeLists.txt
+++ b/server/src/login_server/CMakeLists.txt
@@ -1,25 +1,17 @@
-cmake_minimum_required(VERSION 2.6)
-PROJECT(loginserver)
+cmake_minimum_required(VERSION 3.12)
+project(loginserver LANGUAGES CXX)
 
 AUX_SOURCE_DIRECTORY(./ SRC_LIST)
 
-#SET(LIBRARY_OUTPUT_PATH ./)
-SET(EXECUTABLE_OUTPUT_PATH  ./)
-if(APPLE)
-    SET(PB_LIB_DIR ../base/pb/lib/mac)
-elseif(UNIX)
-    SET(PB_LIB_DIR ../base/pb/lib/linux)
-endif()
+add_executable(login_server ${SRC_LIST})
+target_compile_features(login_server PRIVATE cxx_std_11)
+target_compile_definitions(login_server PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
+    -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
+    -DAC_HAS_DEBUG -DLINUX_DAEMON)
+target_include_directories(login_server PRIVATE ../base ../base/pb/protocol)
 
-ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
--DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
--DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)
+find_package(jsoncpp CONFIG REQUIRED)
+get_target_property(jsoncpp_INCLUDE_DIR jsoncpp_lib INTERFACE_INCLUDE_DIRECTORIES)
+target_include_directories(login_server PRIVATE .. ${jsoncpp_INCLUDE_DIR} ${jsoncpp_INCLUDE_DIR}/jsoncpp)
 
-INCLUDE_DIRECTORIES(./ ../base ../base/pb/protocol ../base/jsoncpp/ ../base/pb/)
-LINK_DIRECTORIES(./ ../base ${PB_LIB_DIR} ../base/slog/lib)
-
-#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
-#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
-ADD_EXECUTABLE(login_server ${SRC_LIST})
-
-TARGET_LINK_LIBRARIES(login_server base protobuf-lite slog pthread) 
+target_link_libraries(login_server PRIVATE base slog pthread protobuf-lite jsoncpp)
