--- a/server/src/msfs/CMakeLists.txt
+++ b/server/src/msfs/CMakeLists.txt
@@ -1,21 +1,12 @@
-cmake_minimum_required(VERSION 2.6)
-PROJECT(msfs)
+cmake_minimum_required(VERSION 3.12)
+PROJECT(msfs LANGUAGES CXX)
 
 AUX_SOURCE_DIRECTORY(./ SRC_LIST)
 
-#SET(LIBRARY_OUTPUT_PATH ./)
-SET(EXECUTABLE_OUTPUT_PATH  ./)
-
-ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
--DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
--DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)
-
-INCLUDE_DIRECTORIES(./ ../base)
-LINK_DIRECTORIES(./ ../base ../base/slog/lib)
-
-#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
-#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
 ADD_EXECUTABLE(msfs ${SRC_LIST})
-
-TARGET_LINK_LIBRARIES(msfs pthread base slog)
- 
+target_compile_features(msfs PRIVATE cxx_std_11)
+target_compile_definitions(msfs PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
+  -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
+  -DAC_HAS_DEBUG -DLINUX_DAEMON)
+target_include_directories(msfs PRIVATE .. ../base ../base/pb/protocol)
+TARGET_LINK_LIBRARIES(msfs PRIVATE pthread base slog)
