--- a/server/src/route_server/CMakeLists.txt
+++ b/server/src/route_server/CMakeLists.txt
@@ -1,26 +1,12 @@
-cmake_minimum_required(VERSION 2.6)
-PROJECT(routeserver)
+cmake_minimum_required(VERSION 3.12)
+project(routeserver LANGUAGES CXX)
 
 AUX_SOURCE_DIRECTORY(./ SRC_LIST)
 
-#SET(LIBRARY_OUTPUT_PATH ./)
-SET(EXECUTABLE_OUTPUT_PATH  ./)
-if(APPLE)
-    SET(PB_LIB_DIR ../base/pb/lib/mac)
-elseif(UNIX)
-    SET(PB_LIB_DIR ../base/pb/lib/linux)
-endif()
-
-
-ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
--DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
--DAC_HAS_DEBUG -DLINUX_DAEMON -std=c++11)
-
-INCLUDE_DIRECTORIES(./ ../base ../base/pb/protocol ../base/jsoncpp/ ../base/pb/)
-LINK_DIRECTORIES(./ ../base ${PB_LIB_DIR} ../base/slog/lib)
-
-#ADD_XXXX必须在TARGET_LINK_LIBRARIES前面，否则会报错
-#ADD_LIBRARY(${PROJECTNAME} SHARED/STATIC ${SRC_LIST})
 ADD_EXECUTABLE(route_server ${SRC_LIST})
-
-TARGET_LINK_LIBRARIES(route_server base slog protobuf-lite pthread)
+target_compile_features(route_server PRIVATE cxx_std_11)
+target_compile_definitions(route_server PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
+-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
+-DAC_HAS_DEBUG -DLINUX_DAEMON)
+target_include_directories(route_server PRIVATE .. ../base ../base/pb/protocol)
+TARGET_LINK_LIBRARIES(route_server PRIVATE base slog protobuf-lite pthread)
